--- a/lambda/package.json
+++ b/lambda/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "@talkyjs/core": "^1.0.0",
     "ask-sdk-core": "^2.6.0",
-    "ask-sdk-model": "^1.18.0",
-    "aws-sdk": "^2.326.0"
+    "ask-sdk-model": "^1.18.0"
   },
   "devDependencies": {
     "@ask-utils/test": "3.x",
