--- a/infrastructure/cfn-deployer/skill-stack.yaml
+++ b/infrastructure/cfn-deployer/skill-stack.yaml
@@ -35,10 +35,15 @@ Resources:
                   Action:
                     - logs:*
                   Resource: arn:aws:logs:*:*:*
+          - PolicyName: alexaSkillS3ExecutionPolicy
+            PolicyDocument:
+              Version: 2012-10-17
+              Statement:
                 - Effect: Allow
                   Action:
                     - s3:*
-                  Resource: arn:aws:s3:::alexa-summer-camp-memory/*
+                  Resource: 
+                    - arn:aws:s3:::*
   AlexaSkillFunction:
     Type: AWS::Lambda::Function
     Properties:
