feat(add): events, and handlers

--- a/infrastructure/cfn-deployer/skill-stack.yaml
+++ b/infrastructure/cfn-deployer/skill-stack.yaml
@@ -44,6 +44,17 @@ Resources:
                     - s3:*
                   Resource: 
                     - arn:aws:s3:::*
+          - PolicyName: alexaSkillDynamoDbExecutionPolicy
+            PolicyDocument:
+              Version: 2012-10-17
+              Statement:
+                - Effect: Allow
+                  Action:
+                    - dynamodb:GetItem
+                    - dynamodb:PutItem
+                    - dynamodb:UpdateItem
+                  Resource: 
+                    - arn:aws:dynamodb:us-east-1:*:table/AlexaSummerMemories-playbackInfo
   AlexaSkillFunction:
     Type: AWS::Lambda::Function
     Properties:
