--- a/lambda/package.json
+++ b/lambda/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "summer-camp-memory",
+  "name": "summer-memories",
   "version": "1.1.0",
   "description": "alexa utility for quickly building skills",
   "main": "index.js",
